<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".View.RegisterUser.RegisterUser">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_register"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/register"/>

    <androidx.core.widget.NestedScrollView
        android:fillViewport="true"
        android:layout_weight="9.9"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:paddingTop="@dimen/canhle40"
            android:background="@color/backgound"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_marginBottom="@dimen/canhle30"
                    android:id="@+id/picturehs"
                    android:layout_gravity="center"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/logo1" />
                <EditText
                    android:inputType="textEmailAddress"
                    android:layout_marginBottom="@dimen/canhle10"
                    android:id="@+id/edt_email"
                    android:drawableLeft="@drawable/ic_baseline_email_24"
                    android:drawablePadding="@dimen/canhle8"
                    android:hint="@string/email"
                    android:layout_marginHorizontal="@dimen/canhle30"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:layout_marginVertical="@dimen/canhle10"
                    android:id="@+id/edt_pass"
                    android:drawableRight="@drawable/ic_baseline_visibility_off_24"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/ic_baseline_key_24"
                    android:drawablePadding="@dimen/canhle8"
                    android:longClickable="false"
                    android:hint="@string/password"
                    android:layout_marginHorizontal="@dimen/canhle30"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:layout_marginTop="@dimen/canhle10"
                    android:id="@+id/edt_cfpass"
                    android:drawableRight="@drawable/ic_baseline_visibility_off_24"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/ic_baseline_key_24"
                    android:drawablePadding="@dimen/canhle8"
                    android:longClickable="false"
                    android:hint="@string/confirm_password"
                    android:layout_marginHorizontal="@dimen/canhle30"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn1_dangki"
                    android:layout_marginTop="@dimen/canhle30"
                    android:layout_marginHorizontal="@dimen/canhle30"
                    android:background="@drawable/btn_bogoc"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textSize="@dimen/size20"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


            <LinearLayout
                android:layout_marginBottom="@dimen/canhle20"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/canhle30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="@dimen/size18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dacotk"/>
                <TextView
                    android:id="@+id/tv1_dangnhap"
                    android:textColor="@color/red"
                    android:textSize="@dimen/size18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    
</LinearLayout>